--- a/Source/Common/Projects/NTDirectX/Motion.cls
+++ b/Source/Common/Projects/NTDirectX/Motion.cls
@@ -16,28 +16,22 @@ Option Explicit
 Private pForm As MotionTypes
 
 Private pKey As String
+
+Private pSerialize As Boolean
+Public Property Get Serialize() As Boolean
+Attribute Serialize.VB_MemberFlags = "40"
+    Serialize = pSerialize
+End Property
+Public Property Let Serialize(ByVal RHS As Boolean)
+    pSerialize = RHS
+End Property
+
+
 Public Property Get Key() As String
     Key = pKey
 End Property
 Public Property Let Key(ByVal RHS As String)
-'    If Motions.Exists(pKey) And pKey <> "" Then Motions.Remove pKey
-'    pKey = RHS
-'    If RHS <> "" And (Not Motions.Exists(RHS)) Then Motions.Add Me, RHS
-    
-'    If RHS = "" And Motions.Exists(pKey) Then
-'        Motions.Remove pKey
-'        pKey = ""
-'    Else
-        If pKey <> "" And (Not Motions.Exists(RHS)) Then
-           ' If All.Exists(pKey) Then All.Remove pKey
-            If Motions.Exists(pKey) Then Motions.Remove pKey
-           ' All.Add Me, RHS
-            Motions.Add Me, RHS
-            pKey = RHS
-        ElseIf pKey = "" Then
-            pKey = RHS
-        End If
-'    End If
+    pKey = RHS
 End Property
 
 Public Property Get Form() As Long
@@ -47,44 +41,13 @@ Public Property Let Form(ByRef RHS As Long)
     pForm = RHS
 End Property
 
-Public Property Get Serialize() As String
-    Serialize = "[" & pForm & "]"
-End Property
-Public Property Let Serialize(ByVal RHS As String)
 
-    RHS = Trim(RHS)
-    If Left(RHS, 1) = "[" And Right(RHS, 1) = "]" Then
-        RHS = Mid(RHS, 2, Len(RHS) - 2) & ","
-        If InStr(RHS, ",") > 0 Then
-            If IsNumeric(Left(RHS, InStr(RHS, ",") - 1)) Then
-                X = CSng(Left(RHS, InStr(RHS, ",") - 1))
-            Else
-                X = CSng(frmMain.Evaluate(Left(RHS, InStr(RHS, ",") - 1)))
-            End If
-            RHS = Mid(RHS, InStr(RHS, ",") + 1)
-        End If
-        If InStr(RHS, ",") > 0 Then
-            If IsNumeric(Left(RHS, InStr(RHS, ",") - 1)) Then
-                Y = CSng(Left(RHS, InStr(RHS, ",") - 1))
-            Else
-                Y = CSng(frmMain.Evaluate(Left(RHS, InStr(RHS, ",") - 1)))
-            End If
-            RHS = Mid(RHS, InStr(RHS, ",") + 1)
-        End If
-        If InStr(RHS, ",") = 0 Then
-            If IsNumeric(Left(RHS, InStr(RHS, ",") - 1)) Then
-                z = CSng(Left(RHS, InStr(RHS, ",") - 1))
-            Else
-                z = CSng(frmMain.Evaluate(Left(RHS, InStr(RHS, ",") - 1)))
-            End If
-            RHS = Mid(RHS, InStr(RHS, ",") + 1)
-        End If
-    End If
-End Property
+Private Sub Class_Initialize()
+    pKey = "K" & ObjPtr(Me)
+End Sub
 
 Private Sub Class_Terminate()
     If pKey <> "" Then
         If Motions.Exists(pKey) Then Motions.Remove pKey
-      '  If All.Exists(pKey) Then All.Remove pKey
     End If
 End Sub
