--- a/Source/Common/Projects/NTDirectX/Range.cls
+++ b/Source/Common/Projects/NTDirectX/Range.cls
@@ -17,6 +17,10 @@ Implements Point
 
 Private pW As Single
 
+Public Property Get Serialize() As Boolean
+Attribute Serialize.VB_MemberFlags = "40"
+    Serialize = True
+End Property
 Public Property Get X() As Single
     X = Point.X
 End Property
@@ -49,24 +53,24 @@ Public Function Equals(ByRef Range As Range) As Boolean
     Equals = (Point.Equals(Range) And Range.W = W)
 End Function
 
-Public Property Get Serialize() As String
-Attribute Serialize.VB_UserMemId = 0
-Attribute Serialize.VB_MemberFlags = "600"
-    Serialize = "[" & Round(X, 6) & ", " & Round(Y, 6) & ", " & Round(z, 6) & ", " & Round(W, 6) & "]"
+Public Property Get ToString() As String
+Attribute ToString.VB_UserMemId = 0
+Attribute ToString.VB_MemberFlags = "600"
+    ToString = "[" & Round(Point.X, 6) & ", " & Round(Point.Y, 6) & ", " & Round(Point.z, 6) & ", " & Round(pW, 6) & "]"
 End Property
-Public Property Let Serialize(ByVal RHS As String)
+Public Property Let ToString(ByVal RHS As String)
     RHS = RemoveQuotedArg(RHS, "[", "]")
     If IsNumeric(NextArg(RHS, ",")) Then
-        X = CSng(NextArg(RHS, ","))
+        Point.X = CSng(NextArg(RHS, ","))
     End If
     If IsNumeric(NextArg(RemoveArg(RHS, ","), ",")) Then
-        Y = CSng(NextArg(RemoveArg(RHS, ","), ","))
+        Point.Y = CSng(NextArg(RemoveArg(RHS, ","), ","))
     End If
     If IsNumeric(NextArg(RemoveArg(RemoveArg(RHS, ","), ","), ",")) Then
-        z = CSng(NextArg(RemoveArg(RemoveArg(RHS, ","), ","), ","))
+        Point.z = CSng(NextArg(RemoveArg(RemoveArg(RHS, ","), ","), ","))
     End If
     If IsNumeric(NextArg(RemoveArg(RemoveArg(RemoveArg(RHS, ","), ","), ","), ",")) Then
-        W = CSng(NextArg(RemoveArg(RemoveArg(RemoveArg(RHS, ","), ","), ","), ","))
+        pW = CSng(NextArg(RemoveArg(RemoveArg(RemoveArg(RHS, ","), ","), ","), ","))
     End If
 End Property
 
@@ -75,37 +79,42 @@ Private Sub Class_Initialize()
 End Sub
 
 Private Function Point_Equals(Point As Point) As Boolean
-    Point_Equals = Me.Equals(Point)
+    Point_Equals = Point.Equals(Point)
 End Function
 
-Private Property Let Point_Serialize(ByVal RHS As String)
-    Me.Serialize = RHS
+
+Private Property Get Point_Serialize() As Boolean
+    Point_Serialize = Point.Serialize
 End Property
 
-Private Property Get Point_Serialize() As String
-    Point_Serialize = Me.Serialize
+Private Property Let Point_ToString(ByVal RHS As String)
+    Point.ToString = RHS
+End Property
+
+Private Property Get Point_ToString() As String
+    Point_ToString = Point.ToString
 End Property
 
 Private Property Let Point_X(ByVal RHS As Single)
-    Me.X = RHS
+    Point.X = RHS
 End Property
 
 Private Property Get Point_X() As Single
-    Point_X = Me.X
+    Point_X = Point.X
 End Property
 
 Private Property Let Point_Y(ByVal RHS As Single)
-    Me.Y = RHS
+    Point.Y = RHS
 End Property
 
 Private Property Get Point_Y() As Single
-    Point_X = Me.Y
+    Point_X = Point.Y
 End Property
 
 Private Property Let Point_Z(ByVal RHS As Single)
-    Me.z = RHS
+    Point.z = RHS
 End Property
 
 Private Property Get Point_Z() As Single
-    Point_Z = Me.Y
+    Point_Z = Point.Y
 End Property
